force-app/main/default/objects/Account/fields/Erica_Account__c.field-meta.xml
<CustomField>
    <fullName>Erica_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Erica Account</label>
    <type>Checkbox</type>
</CustomField>