force-app/main/default/objects/Account/fields/Favorite_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Holiday__c</fullName>
    <label>Favorite Holiday</label>
    <length>255</length>
    <type>Text</type>
</CustomField>