force-app/main/default/objects/Account/fields/Job_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Order_Number__c</fullName>
    <label>Job Order Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>