force-app/main/default/objects/Account/fields/Release_Information__c.field-meta.xml
<CustomField>
    <fullName>Release_Information__c</fullName>
    <label>Release Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>