force-app/main/default/objects/Account/fields/Technology_Practice_Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Technology_Practice_Billing_Type__c</fullName>
    <label>Technology Practice Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agile</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>AI &amp; Machine Learning</fullName>
            </value>
            <value>
                <fullName>Big Data &amp; Analytics</fullName>
            </value>
            <value>
                <fullName>Blockchain</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>DevOps</fullName>
            </value>
            <value>
                <fullName>Digital Quality Assurance</fullName>
            </value>
            <value>
                <fullName>Embedded</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>