force-app/main/default/objects/Account/fields/Turkey_Time__c.field-meta.xml
<CustomField>
    <fullName>Turkey_Time__c</fullName>
    <label>Turkey Time</label>
    <type>DateTime</type>
</CustomField>